[gd_scene load_steps=9 format=2]

[ext_resource path="res://gfx/blackboard.jpg" type="Texture" id=1]
[ext_resource path="res://gfx/Feltpen.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://StoryTime.gd" type="Script" id=3]
[ext_resource path="res://gfx/blue_button12.png" type="Texture" id=4]
[ext_resource path="res://gfx/blue_button11.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 2 )

[node name="LoonyLips" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 25.0
margin_right = -25.0
margin_bottom = -2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayText" type="Label" parent="VBoxContainer"]
margin_right = 974.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
custom_fonts/font = SubResource( 1 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 104.0
margin_right = 974.0
margin_bottom = 177.0
alignment = 2

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 897.0
margin_bottom = 73.0
rect_min_size = Vector2( 100, 73 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 901.0
margin_right = 974.0
margin_bottom = 73.0
grow_horizontal = 0
rect_min_size = Vector2( 73, 73 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OkText" type="Label" parent="VBoxContainer/HBoxContainer/TextureButton"]
anchor_left = -12.325
anchor_right = 1.0
anchor_bottom = 0.932
margin_left = 877.907
margin_top = 11.6818
margin_right = -12.8179
margin_bottom = 2.64579
custom_fonts/font = SubResource( 3 )
text = "  Ok"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="text_entered" from="VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
